--- a/hermit/src/main/webapp/css/adminia.css
+++ b/hermit/src/main/webapp/css/adminia.css
@@ -29,7 +29,7 @@
 body {	
 	font: 13px/1.7em "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, arial, sans-serif;
 	
-	background: url(../img/body-bg.png) repeat 0 0;
+	background: url(./images/body-bg.png) repeat 0 0;
 }
 
 p {	
@@ -192,8 +192,8 @@ input {
 	
 	position: relative;
 	
-	height: 40px;
-	line-height: 40px;
+	height: 50px;
+	line-height: 50px;
 	
 	background: #E9E9E9;
 	background:-moz-linear-gradient(top, #FAFAFA 0%, #E9E9E9 100%); /* FF3.6+ */
