--- a/hermit/src/main/webapp/css/style.css
+++ b/hermit/src/main/webapp/css/style.css
@@ -356,7 +356,20 @@ xsigin/signup popup
   -o-appearance: none;
   appearance: none;
 }
-.no-touch .cd-form input[type=submit]:hover, .no-touch .cd-form input[type=submit]:focus {
+.cd-form input[type=button] {
+  padding: 16px 0;
+  cursor: pointer;
+  background: #2f889a;
+  color: #FFF;
+  font-weight: bold;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+}
+.no-touch .cd-form input[type=submit]:hover, .cd-form input[type=button]:hover, .no-touch .cd-form input[type=submit]:focus {
   background: #3599ae;
   outline: none;
 }
@@ -434,6 +447,9 @@ xsigin/signup popup
     padding: 16px 20px 16px 50px;
   }
   .cd-form input[type=submit] {
+    padding: 16px 0;
+  }
+  .cd-form input[type=button] {
     padding: 16px 0;
   }
 }
