--- a/hermit/src/main/webapp/css/style.css
+++ b/hermit/src/main/webapp/css/style.css
@@ -89,7 +89,7 @@ header[role=banner]::after {
 
 .main-nav {
   float: right;
-  margin-right: 1%;
+/*   margin-right: 1%; */
   width: 44px;
   height: 100%;
   background: url("../images/cd-icon-menu.svg") no-repeat center center;
