--- a/hermit/src/main/webapp/css/jquery.otg-carousel.css
+++ b/hermit/src/main/webapp/css/jquery.otg-carousel.css
@@ -20,6 +20,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  background-color:white;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -84,7 +85,7 @@ body {
   padding: 10px 60px;
   width: 100%;
   box-sizing: border-box;
-  background-color: rgba(0, 0, 0, 0.44);
+  background-color: rgba(0, 0, 0, 0.35);
   color: #fff;
   transition: .5s ease;
 }
